--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 .App {
   text-align: center;
 }
@@ -37,4 +36,17 @@
     transform: rotate(360deg);
   }
 }
+/* Deklarasikan keyframes untuk animasi */
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
+/* Menerapkan animasi */
+.rect-animate {
+  animation: fadeIn 2s ease;
+}
